Fix cards spacing

--- a/style.css
+++ b/style.css
@@ -132,8 +132,8 @@ body {
 	border-radius: 0.5em;
 	border: 1px solid rgba(0,0,0,0.05);
 	display: inline-block;
-	width: 33%;
-	margin: 0.2em 0;
+	width: 32%;
+	margin: 0.3em;
 	vertical-align: top;
 }
 
